<resources>
    <string name="app_name">MediWon</string>

    <string name="search">Search</string>

    <!-- Navigation Drawer Toggle -->
    <string name="start">Start</string>
    <string name="close">Close</string>

    <!-- Navigation Drawer (My Page Menu) -->
    <string name="my_page">My Page</string>
    <string name="edit">개인 정보 수정</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="my_setting">My 설정</string>
    <string name="my_review">내가 작성한 후기</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원탈퇴</string>

    <!-- Bottom Navigation -->
    <string name="bottom_nav_1">약 검색</string>
    <string name="bottom_nav_2">성분 검색</string>
    <string name="bottom_nav_3">즐겨찾기</string>
    <string name="bottom_nav_4">설정</string>

    <!-- 약 검색 페이지 -->
    <string name="tab1">제품명</string>
    <string name="tab2">효능</string>

    <!-- 상세 페이지 -->
    <string name="detail_page">상세 정보 페이지</string>
    <string name="detail_page_tab1">약품 정보</string>
    <string name="detail_page_tab2">식별 정보</string>
    <string name="detail_page_tab3">효능 정보</string>
    <string name="detail_page_tab4">용법 정보</string>
    <string name="detail_page_tab5">성분 정보</string>
    <string name="detail_page_tab6">주의사항 정보</string>
    <string name="detail_page_bookmark">상세 정보 페이지</string>

    <!-- 즐겨찾기 페이지 -->
    <string name="bookmark_page">즐겨찾기 페이지</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
