<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationSearchMedicine"
        android:enabled="true"
        android:icon="@drawable/ic_pill_capsule"
        android:title="@string/bottom_nav_1"/>

    <item
        android:id="@+id/navigationSearchMedicineByIngredients"
        android:enabled="true"
        android:icon="@drawable/ic_open_pill"
        android:title="@string/bottom_nav_2"/>

    <item
        android:id="@+id/navigationBookmark"
        android:enabled="true"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/bottom_nav_3"/>

    <item
        android:id="@+id/navigationSetting"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/bottom_nav_4"/>

</menu>