<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigationSearchMedicine">

    <fragment
        android:id="@+id/navigationSearchMedicine"
        android:name="com.example.mediwon.ui.bottom_navigation.search_medicine.SearchMedicineFragment"
        android:label="@string/bottom_nav_1"
        tools:layout="@layout/fragment_search_medicine" />

    <fragment
        android:id="@+id/navigationSearchMedicineByIngredients"
        android:name="com.example.mediwon.ui.bottom_navigation.search_ingredients.SearchIngredientsFragment"
        android:label="@string/bottom_nav_2"
        tools:layout="@layout/fragment_search_ingredients" />

    <fragment
        android:id="@+id/navigationSearchSideEffect"
        android:name="com.example.mediwon.ui.bottom_navigation.search_side_effect.SearchSideEffectFragment"
        android:label="@string/bottom_nav_3"
        tools:layout="@layout/fragment_search_side_effect" />

</navigation>